%%{init: {'theme':'base','themeVariables':{'primaryColor':'#ffffff','primaryTextColor':'#0b1220','primaryBorderColor':'#0f172a','lineColor':'#1e293b','fontFamily':'Segoe UI, Roboto, Helvetica, sans-serif','fontSize':'15px','textColor':'#0b1220'}}}%%
erDiagram
    MODEL ||--o{ DUEL : "left / right"
    MODEL ||--o{ ELO_HISTORY : "rating trail"
    DUEL ||--o{ DUEL_RESULT : "one per side"
    DUEL ||--o{ ELO_HISTORY : "two rows per verdict"
    DUEL_RESULT }o--|| MODEL : "produced by"

    MODEL {
        string ModelId PK "ULID"
        string DisplayName
        enum ModelType "Local | Remote | LocalService"
        double CurrentElo "starts 1200"
        int DuelCount
        int WinCount
        int DrawCount
        decimal InputTokenPricePerMillion "nullable"
        decimal OutputTokenPricePerMillion "nullable"
    }
    DUEL {
        string DuelId PK "ULID"
        string PromptText
        string LeftModelId FK
        string RightModelId FK
        enum Verdict "Pending|Left|Right|Tie|Expired"
        enum VerdictSource "Human | Ai"
        string JudgeRationale
        datetime CompletedAt
    }
    DUEL_RESULT {
        string DuelId PK, FK
        string ModelId PK, FK
        int TokenCount
        long WarmUpDurationMs "TTFT"
        double TokenVelocity
        string HtmlOutputRaw "or blob:// pointer"
        bool IsFailure
        double ApiCostUsd
        double EnergyWh
    }
    ELO_HISTORY {
        string ModelId PK, FK
        string TimestampKey PK "invertedTicks_DuelId"
        double EloBefore
        double EloAfter
        string Outcome
    }
